# snakeworld

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  post.fs  run.sh
include/: game_math.h  menu.h  message_queue.h  resources.h  snake.h
include/scenes/: credits.h  end_game.h  game.h  menu.h  scene.h
src/: enemy.c  enemy.h  game_math.c  game_math.h  kv_store.c  kv_store.h  main.c  menu.c  message_queue.c  message_queue.h  resources.c  resources.h  snake.c  snake.h
src/scenes/: credits.c  end_game.c  game.c  game.h  menu.c  scene.c
